--- a/Module_A_Representation_of_Numbers.ipynb
+++ b/Module_A_Representation_of_Numbers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxGaeFziINY4XHAkKy9PpE",
+      "authorship_tag": "ABX9TyOLK0FBtLYhmnnDHUKCluIU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -365,6 +365,155 @@
           },
           "metadata": {},
           "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Round-Off Errors\n",
+        "\n",
+        "### Introduction:\n",
+        "**Round-off errors** occur because floating-point numbers cannot represent real numbers with perfect precision. This limitation arises from:\n",
+        "1. The **finite number of bits** used to store floating-point numbers.\n",
+        "2. The inability to represent some numbers exactly in binary form (e.g., 0.1).\n",
+        "\n",
+        "### Types of Round-Off Errors:\n",
+        "1. **Representation Error**:\n",
+        "   - Certain numbers cannot be represented exactly in binary form, leading to approximation.\n",
+        "   - For example, 0.1 in decimal is a repeating binary fraction:\n",
+        "$$\n",
+        "     0.1 = 0.0001100110011\\ldots_\\text{binary}\n",
+        "$$\n",
+        "     The binary representation is truncated or rounded, causing a small error.\n",
+        "\n",
+        "2. **Arithmetic Error**:\n",
+        "   - When performing operations (e.g., addition or subtraction) with floating-point numbers, the results may be slightly inaccurate due to rounding during intermediate calculations.\n",
+        "   - Example:\n",
+        "     $$\n",
+        "     0.3 + 0.6 \\neq 0.9\n",
+        "     $$\n",
+        "     In Python:"
+      ],
+      "metadata": {
+        "id": "lgu74lYr2XsY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(0.3 + 0.6 == 0.9)  # Outputs: False"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5TIiraEo314o",
+        "outputId": "a70c2795-36f3-47a4-c8d8-ea5b3ade0bdb"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. **Accumulation Error**:\n",
+        "   - Errors accumulate when many operations with rounding are performed in sequence.\n",
+        "   - Example:\n",
+        "     Adding 1/3 repeatedly and then subtracting the same number of times:\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_uZSPy0i3zbv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "     def add_and_subtract(iterations):\n",
+        "         result = 1\n",
+        "         for _ in range(iterations):\n",
+        "             result += 1/3\n",
+        "         for _ in range(iterations):\n",
+        "             result -= 1/3\n",
+        "         return result\n",
+        "\n",
+        "     print(add_and_subtract(100))  # Outputs: 1.0000000000000002\n",
+        "     print(add_and_subtract(10000))  # Outputs: 1.0000000000001166\n",
+        "     print(add_and_subtract(1000000))  # Outputs: 0.9999999999727986"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L8CIztb730Hd",
+        "outputId": "5c9bf53d-ac77-4687-cc02-0ceaa5ccd44c"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0000000000000002\n",
+            "1.0000000000001166\n",
+            "0.9999999999727986\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Causes of Round-Off Errors:\n",
+        "1. **Finite Precision**:\n",
+        "   - Double-precision floating-point numbers store only 52 bits for the mantissa. This limits the number of significant digits that can be represented.\n",
+        "   - Example:\n",
+        "     The number 1/3 = 0.333333... is truncated after 52 bits in binary.\n",
+        "\n",
+        "2. **Base Conversion**:\n",
+        "   - Decimal fractions like 0.1 cannot be exactly represented in binary, as binary uses powers of 2, not 10.\n",
+        "\n",
+        "3. **Loss of Significance**:\n",
+        "   - Subtracting two nearly equal numbers causes significant digits to cancel, amplifying errors.\n",
+        "   - Example:\n",
+        "     Subtracting 1.00000001 - 1.00000000 should result in 0.00000001, but this is not the case as most digits are lost:"
+      ],
+      "metadata": {
+        "id": "Xhhnbc1H6MTs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1.00000001 - 1.00000000"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j9KdveYk62Zv",
+        "outputId": "8128fc5d-1ec9-4a41-c4e1-0d3e8735b12c"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9.99999993922529e-09"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
         }
       ]
     }
