Fixed some grammar

--- a/Module_A_Representation_of_Numbers.ipynb
+++ b/Module_A_Representation_of_Numbers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLK0FBtLYhmnnDHUKCluIU",
+      "authorship_tag": "ABX9TyO1AxWEMnYgmKDXzjENR2Ho",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,24 +43,24 @@
         "## Base-N and Binary\n",
         "\n",
         "### Introduction:\n",
-        "The **Base-N system** represents numbers using \\(N\\) digits, ranging from \\(0\\) to \\(N-1\\). Each digit corresponds to a power of the base \\(N\\). While Base-10 (decimal) is the system we use in everyday life, other bases, such as **Base-2 (binary)**, are crucial in computing.\n",
+        "The **Base-N system** represents numbers using N digits, ranging from 0 to N-1. Each digit corresponds to a power of the base N. While Base-10 (decimal) is the system used in everyday life, other bases, such as **Base-2 (binary)**, are crucial in computing.\n",
         "\n",
         "In a Base-N number system:\n",
         "$$\n",
         "\\text{Number} = d_k \\cdot N^k + d_{k-1} \\cdot N^{k-1} + \\ldots + d_0 \\cdot N^0\n",
         "$$\n",
-        "Where \\($d_i$\\) are the digits of the number, and \\(N\\) is the base.\n",
+        "Where $d_i$ are the digits of the number, and N is the base.\n",
         "\n",
         "### Why Binary?\n",
         "**Binary (Base-2)** is fundamental to computers because digital circuits operate using two states: high (1) and low (0). This simplicity makes binary efficient for processing and storage.\n",
         "\n",
         "### Conversion Concepts:\n",
         "1. **Decimal to Binary**: Repeatedly divide the decimal number by 2, recording the remainders. The binary representation is the sequence of remainders read in reverse.\n",
-        "2. **Binary to Decimal**: Multiply each digit of the binary number by \\(2^i\\), where \\(i\\) is the position of the digit from right to left (starting at 0), and sum the results.\n",
-        "3. **Arbitrary Base Conversion**: The same logic applies, with \\(N\\) replacing 2 for other bases.\n",
+        "2. **Binary to Decimal**: Multiply each digit of the binary number by $2^i$, where $i$ is the position of the digit from right to left (starting at 0), and sum the results.\n",
+        "3. **Arbitrary Base Conversion**: The same logic applies, with N replacing 2 for other bases.\n",
         "\n",
         "### Examples:\n",
-        "1. **Decimal to Binary Conversion**: Convert \\(19\\) (decimal) to binary:\n",
+        "1. **Decimal to Binary Conversion**: Convert 19 (decimal) to binary:\n",
         "   - $(19 \\div 2 = 9) \\enspace remainder \\enspace (1)$\n",
         "   - $(9 \\div 2 = 4) \\enspace remainder \\enspace (1)$\n",
         "   - $(4 \\div 2 = 2) \\enspace remainder \\enspace (0)$\n",
@@ -68,12 +68,12 @@
         "   - $(1 \\div 2 = 0) \\enspace remainder \\enspace (1)$\n",
         "   - Binary Representation (remainders read in reverse): $10011$.\n",
         "\n",
-        "2. **Binary to Decimal Conversion**: Convert \\(10011\\) (binary) to decimal:\n",
+        "2. **Binary to Decimal Conversion**: Convert 10011 (binary) to decimal:\n",
         "$$\n",
         "10011 = 1 \\cdot 2^4 + 0 \\cdot 2^3 + 0 \\cdot 2^2 + 1 \\cdot 2^1 + 1 \\cdot 2^0 = 16 + 0 + 0 + 2 + 1 = 19\n",
         "$$\n",
         "\n",
-        "3. **Decimal to Base-5 Conversion (Arbitrary Base Converstion Example)**: Convert \\(47\\) (decimal) to Base-5:\n",
+        "3. **Decimal to Base-5 Conversion (Arbitrary Base Converstion Example)**: Convert 47 (decimal) to Base-5:\n",
         "   - $(47 \\div 5 = 9) \\enspace remainder \\enspace (2)$\n",
         "   - $(9 \\div 5 = 1) \\enspace remainder \\enspace (4)$\n",
         "   - $(1 \\div 5 = 0) \\enspace remainder \\enspace (1)$\n",
@@ -160,30 +160,30 @@
         "n = (-1)^s \\cdot m \\cdot 2^e\n",
         "$$\n",
         "Where:\n",
-        "- \\(s\\) is the **sign** bit (\\(0\\) for positive, \\(1\\) for negative),\n",
-        "- \\(m\\) is the **mantissa** (or significand), representing the significant digits,\n",
-        "- \\(e\\) is the **exponent**, representing the power of 2 by which \\(m\\) is scaled.\n",
+        "- $s$ is the **sign** bit (0 for positive, 1 for negative),\n",
+        "- $m$ is the **mantissa** (or significand), representing the significant digits,\n",
+        "- $e$ is the **exponent**, representing the power of 2 by which $m$ is scaled.\n",
         "\n",
         "### IEEE 754 Standard:\n",
         "Modern computers use the **IEEE 754 standard** for floating point representation. The most commonly used format is **double precision (64 bits)**, consisting of:\n",
         "1. **Sign bit (1 bit)**: Determines whether the number is positive (0) or negative (1).\n",
-        "2. **Exponent (11 bits)**: Encodes the power of 2, using a bias of 1023 (i.e., the stored exponent is \\(e + 1023\\)).\n",
+        "2. **Exponent (11 bits)**: Encodes the power of 2, using a bias of 1023 (i.e., the stored exponent is $e + 1023$).\n",
         "3. **Mantissa (52 bits)**: Stores the significant digits. The leading 1 in the mantissa is implicit and not stored to save space.\n",
         "\n",
         "### Example Representation:\n",
-        "Consider the number \\(15.0\\). Its floating point representation in IEEE 754 is as follows:\n",
+        "Consider the number $15.0$. Its floating point representation in IEEE 754 is as follows:\n",
         "1. **Binary Representation**: $15.0 = 1111.0 = 1.111 \\cdot 2^3$\n",
         "2. **Sign**: 0 (positive number)\n",
         "3. **Exponent**: $3 + 1023 = 1026 \\enspace (10000000010 \\enspace in \\enspace binary)$ (This is done by rearranging the formula for the exponent)\n",
         "4. **Mantissa**: $111000... \\enspace (truncated \\enspace to \\enspace 52 \\enspace bits)$\n",
         "\n",
-        "Thus, \\(15.0\\) in IEEE 754 format is:\n",
+        "Thus, $15.0$ in IEEE 754 format is:\n",
         "$$\n",
         "0 \\enspace 10000000010 \\enspace 1110000000000000000000000000000000000000000000000000\n",
         "$$\n",
         "\n",
         "#### Python Demonstration:\n",
-        "Using Python, we can observe this example:"
+        "Using Python, this example can observed:"
       ],
       "metadata": {
         "id": "XCKB4wqDHtd_"
@@ -220,7 +220,7 @@
       "source": [
         "### Key Properties of Floating Point Numbers:\n",
         "1. **Range**: Floating point numbers can represent very large and very small values, but there are limits.\n",
-        "2. **Precision**: Numbers are approximated to a finite number of significant digits, leading to **round-off errors**.\n",
+        "2. **Precision**: Numbers are approximated to a finite number of significant digits, leading to **round-off errors** ( more about this can be found in the next section).\n",
         "3. **Special Values**:\n",
         "   - **Infinity $(-\\infty, +\\infty)$**: Represented when the exponent is all 1s, and the mantissa is all 0s.\n",
         "   - **NaN (Not a Number)**: Represented when the exponent is all 1s, and the mantissa is non-zero.\n",
@@ -230,13 +230,13 @@
         "1. Represent 6.5 as a floating point number:\n",
         "   - $6.5 = 110.1 = 1.101 \\cdot 2^2$\n",
         "   - **Sign**: 0 (positive)\n",
-        "   - **Exponent**: 2 + 1023 = 1025 (10000000001 in binary)\n",
+        "   - **Exponent**: 2 + 1023 = 1025 (10000000001 in binary) (This is done by rearranging the formula for the exponent)\n",
         "   - **Mantissa**: 101000... (truncated to 52 bits)\n",
         "\n",
         "2. Represent 0.1 as a floating point number:\n",
         "   - 0.1 = 1.100110011... (repeating binary) scaled by $2^{-4}$\n",
         "   - **Sign**: 0 (positive)\n",
-        "   - **Exponent**: -4 + 1023 = 1019 (01111111011 in binary)\n",
+        "   - **Exponent**: -4 + 1023 = 1019 (01111111011 in binary) (This is done by rearranging the formula for the exponent)\n",
         "   - **Mantissa**: Binary representation of 0.100110011...\n",
         "\n",
         "### Overflow and Underflow\n",
@@ -245,15 +245,15 @@
         "\n",
         "#### 1. Overflow:\n",
         "- **Definition**: Overflow occurs when a number is too large to be represented within the maximum range of the floating-point format.\n",
-        "- **Result**: When a number exceeds the maximum representable value $( \\text{max value} \\approx 1.8 \\times 10^{308} ) \\text{ for double precision)}$, it is set to $+\\infty$ or $-\\infty$, depending on the sign.\n",
-        "- **Example**: Adding the maximum double-precision number to itself results in overflow:\n",
+        "- **Result**: When a number exceeds the maximum representable value $( \\text{max value} \\approx 1.8 \\times 10^{308} \\text{ for double precision})$, it is set to $+\\infty$ or $-\\infty$, depending on the sign.\n",
+        "- **Example**: Multiplying the maximum double-precision number by 10 results in overflow:\n",
         "$$\n",
-        "  \\text{max} + \\text{max} = +\\infty.\n",
+        "  \\text{max} \\times 10 = +\\infty.\n",
         "$$\n",
         "\n",
         "#### 2. Underflow:\n",
         "- **Definition**: Underflow occurs when a number is too small (in magnitude) to be represented within the minimum normalized range of the floating-point format.\n",
-        "- **Result**: Numbers smaller than the minimum normalized value $( \\text{min value} \\approx 2.2 \\times 10^{-308} ) \\text {for double precision)}$ are represented as **subnormal numbers** or rounded to 0.0 if they are smaller than the subnormal range.\n",
+        "- **Result**: Numbers smaller than the minimum normalized value $( \\text{min value} \\approx 2.2 \\times 10^{-308} \\text {for double precision})$ are represented as **subnormal numbers** or rounded to 0.0 if they are smaller than the subnormal range.\n",
         "- **Example**: Subtracting two very close numbers can result in underflow:\n",
         "$$\n",
         "  2.0 \\times 10^{-308} - 1.0 \\times 10^{-308} = 1.0 \\times 10^{-308}.\n",
@@ -261,7 +261,7 @@
         "  However, if the result is smaller than the smallest subnormal number, it becomes \\(0.0\\).\n",
         "\n",
         "#### Python Demonstration:\n",
-        "Using Python, you can observe overflow and underflow with the `sys.float_info` module:"
+        "Using Python, overflow and underflow can be observed with the `sys.float_info` module:"
       ],
       "metadata": {
         "id": "lYrvctnzl_uN"
@@ -323,7 +323,7 @@
         "   - Near $10^9$, the gap grows to approximately $1.19 \\times 10^{-7}$.\n",
         "\n",
         "4. **Python Demonstration**:\n",
-        "   You can calculate the gap at any number using NumPy's `spacing` function, and if we add a number that is less than half the gap then it will not change the result:\n"
+        "   The gap can be calculated at any number using NumPy's `spacing` function, and if a number is added that is less than half the gap then it will not change the result:\n"
       ],
       "metadata": {
         "id": "Wx3NED07W0dy"
@@ -411,7 +411,7 @@
         "id": "5TIiraEo314o",
         "outputId": "a70c2795-36f3-47a4-c8d8-ea5b3ade0bdb"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
         "id": "L8CIztb730Hd",
         "outputId": "5c9bf53d-ac77-4687-cc02-0ceaa5ccd44c"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +503,7 @@
         "id": "j9KdveYk62Zv",
         "outputId": "8128fc5d-1ec9-4a41-c4e1-0d3e8735b12c"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
