--- a/Module_B_Interpolation_2.ipynb
+++ b/Module_B_Interpolation_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7OQcWNe5BSxIKyZgOgiTY",
+      "authorship_tag": "ABX9TyO/hjyjD7kvFwnKXev9vp/4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,7 +168,7 @@
       "source": [
         "## Newton’s Polynomial Interpolation\n",
         "\n",
-        "Newton’s Polynomial Interpolation is an alternative method for constructing an interpolating polynomial that passes exactly through a given set of data points. Unlike Lagrange interpolation, Newton’s method builds the polynomial incrementally using divided differences, making it more efficient when adding new data points. The interpolating polynomial is expressed in the **Newton form**:\n",
+        "Newton’s Polynomial Interpolation is an alternative method for constructing an interpolating polynomial that passes exactly through a given set of data points. Unlike Lagrange interpolation, Newton’s method builds the polynomial incrementally using divided differences, making it more efficient when adding new data points. The interpolating polynomial is expressed in the Newton form:\n",
         "\n",
         "$$\n",
         "P(x) = f[x_0] + f[x_0, x_1](x - x_0) + f[x_0, x_1, x_2](x - x_0)(x - x_1) + \\dots + f[x_0, x_1, \\dots, x_n] (x - x_0)(x - x_1) \\dots (x - x_{n-1})\n",
@@ -191,7 +191,7 @@
         "P(x) = f[x_0] + f[x_0, x_1] (x - x_0) + f[x_0, x_1, x_2] (x - x_0)(x - x_1) + \\dots\n",
         "$$\n",
         "\n",
-        "where each term $ f[x_0, x_1, \\dots] $ represents a **divided difference**, computed as:\n",
+        "where each term $ f[x_0, x_1, \\dots] $ represents a divided difference, computed as:\n",
         "\n",
         "$$\n",
         "f[x_i, x_{i+1}] = \\frac{f[x_{i+1}] - f[x_i]}{x_{i+1} - x_i}\n",
