Updated Related Works section

--- a/Medical_Calculation_Verification_LLM.ipynb
+++ b/Medical_Calculation_Verification_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbiXNjFHdN0Bedi5v4uHcL",
+      "authorship_tag": "ABX9TyMvRjrs1Pis8YAfYSmrAykX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,9 @@
         "\n",
         "Recent advancements in artificial intelligence, particularly Large Language Models (LLMs) like OpenAI's GPT-4, have opened new avenues for enhancing medical tools. Studies have demonstrated that GPT-4 can pass medical licensing examinations, indicating its potential to assist in clinical decision-making by processing and generating human-like text. For instance, GPT-4 \"can achieve an overall accuracy rate of 81% across medical licensing exams from different countries, successfully passing most of these exams\" (Liu et al., 2024a). This capability allows LLMs to provide detailed explanations and context for medical calculations, potentially reducing errors and improving understanding.\n",
         "\n",
-        "However, integrating LLMs into healthcare applications presents challenges, including ensuring accuracy, maintaining patient privacy, and obtaining regulatory approval. Despite these challenges, the potential benefits of LLMs in providing dynamic, context-aware medical calculations make them a promising area for further research and development (Liu et al., 2024b)."
+        "However, integrating LLMs into healthcare applications presents challenges, including ensuring accuracy, maintaining patient privacy, and obtaining regulatory approval. Despite these challenges, the potential benefits of LLMs in providing dynamic, context-aware medical calculations make them a promising area for further research and development (Liu et al., 2024b).\n",
+        "\n",
+        "While existing clinical calculators provide valuable decision-support tools, they often lack dynamic error-checking and clear explanations for results. Similarly, while LLMs have shown strong potential in medical reasoning, their integration into medical calculation verification remains underexplored. This project aims to bridge that gap by developing an LLM-based Medical Calculation Verification Agent that not only verifies calculations but also offers contextual explanations to reduce errors and improve clinical decision-making."
       ],
       "metadata": {
         "id": "d-yF8BMIhGu1"
@@ -72,7 +74,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Proposed Methodology/Models**\n",
+        "### **Proposed Methodology/Models**\n",
         "\n",
         "The proposed system will utilize a Large Language Model (LLM), such as OpenAI's GPT or DeepSeek API, to build a Medical Calculation Verification Agent. The agent will verify key medical calculations through structured prompts designed to guide the model in performing arithmetic checks, unit conversions, and error analysis.\n",
         "\n",
@@ -108,7 +110,7 @@
       "source": [
         "### **Expected Results**\n",
         "\n",
-        "The expected outcome of this project is a Medical Calculation Verification Agent that accurately verifies key medical calculations, such as BMI, medication dosages, and Body Surface Area. The system is anticipated to achieve a high accuracy rate, ideally exceeding 95%, by ensuring precise calculation steps and identifying potential errors in medical formulas. Additionally, the agent is expected to provide meaningful feedback when discrepancies arise, helping healthcare professionals identify mistakes quickly and improve decision-making.\n",
+        "The hypothesized outcome of this project is a Medical Calculation Verification Agent that accurately verifies key medical calculations, such as BMI, medication dosages, and Body Surface Area. The system is anticipated to achieve a high accuracy rate, ideally exceeding 95%, by ensuring precise calculation steps and identifying potential errors in medical formulas. Additionally, the agent is expected to provide meaningful feedback when discrepancies arise, helping healthcare professionals identify mistakes quickly and improve decision-making.\n",
         "\n",
         "The agent is also expected to demonstrate reliable performance across a range of medical scenarios, including edge cases involving extreme values or unusual data inputs. The system’s error rate should remain low, with minimal variance between the model's output and established medical guidelines. Furthermore, the response time is expected to be efficient enough for practical use in clinical settings, ensuring minimal disruption to healthcare workflows.\n",
         "\n",
